# oasf-agent-directory-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  SECURITY.md  acp.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
oasf_agent_directory_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_oasf.py  test_server.py
