[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oasf-agent-directory-mcp"
version = "1.0.2"
description = "OASF / AGNTCY agent directory MCP — bridges Cisco's Open Agentic Schema Framework to MCP + A2A. Linux Foundation governed. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "oasf", "agntcy", "cisco", "linux-foundation", "agent-directory", "a2a", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://meok.ai/a2a"
Repository = "https://github.com/CSOAI-ORG/oasf-agent-directory-mcp"

[project.scripts]
oasf-agent-directory-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]


[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_Configs = true
disallow_untyped_defs = true

